--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "samcarre/pokeapi-sdk",
+    "name": "sammyjo20/pokeapi-sdk",
     "description": "Unofficial PHP SDK for Pokeapi",
     "license": "MIT",
     "type": "library",
