--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "sammyjo20/saloon": "v2.x-dev"
+        "saloonphp/saloon": "^2.12",
+        "saloonphp/pagination-plugin": "^1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.13",
