--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "saloonphp/saloon": "^2.12",
-        "saloonphp/pagination-plugin": "^1.1"
+        "saloonphp/saloon": "^3.0.0-beta.7",
+        "saloonphp/pagination-plugin": "^2.0.0-beta.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.13",
